tests/kulezi_tests/bad/unknown_variable_type02.lat
class c {
    unknownType x;
}

int main() {
    return 0;
}